* Fixed Firefox 3.1 incompatibility due to loading xbl from resource urls.  Moved xbl files to chrome://minion/content/. * Stopped collapsing Track column when not showing album, it will now always be available. * Now building xulrunner version with package.sh script.

--- a/branches/2.0_no_db/chrome/content/bindings.css
+++ b/branches/2.0_no_db/chrome/content/bindings.css
@@ -1,27 +1,27 @@
 mpdlabel {
-	-moz-binding: url("resource://minion/mpdControls.xml#mpdLabel")
+    -moz-binding: url("chrome://minion/content/mpdControls.xml#mpdLabel")
 }
 mpdtime {
-	-moz-binding: url("resource://minion/mpdControls.xml#mpdTime")
+    -moz-binding: url("chrome://minion/content/mpdControls.xml#mpdTime")
 }
 mpdvolume {
-	-moz-binding: url("resource://minion/mpdControls.xml#mpdVolume")
+    -moz-binding: url("chrome://minion/content/mpdControls.xml#mpdVolume")
 }
 mpdcontrols {
-	-moz-binding: url("resource://minion/mpdControls.xml#mpdPlayback")
+    -moz-binding: url("chrome://minion/content/mpdControls.xml#mpdPlayback")
 }
 mpdplaylist {
-    -moz-binding: url("resource://minion/playlistBindings.xml#mpdPlaylist")
+    -moz-binding: url("chrome://minion/content/playlistBindings.xml#mpdPlaylist")
 }
 mpdbrowser {
-    -moz-binding: url("resource://minion/collectionBindings.xml#mpdBrowser")
+    -moz-binding: url("chrome://minion/content/collectionBindings.xml#mpdBrowser")
 }
 mpdservers {
-    -moz-binding: url("resource://minion/mpdControls.xml#mpdServers")
+    -moz-binding: url("chrome://minion/content/mpdControls.xml#mpdServers")
 }
 mpdtoggle {
-    -moz-binding: url("resource://minion/mpdControls.xml#mpdToolbarButton")
+    -moz-binding: url("chrome://minion/content/mpdControls.xml#mpdToolbarButton")
 }
 mpdalbumcover {
-    -moz-binding: url("resource://minion/mpdControls.xml#mpdAlbumCover")
+    -moz-binding: url("chrome://minion/content/mpdControls.xml#mpdAlbumCover")
 }
